# senn-rx-monitor

./: .gitignore  .pylintrc  README.md  README.rst  __init__.py  add_receiver_dialog.py  meters.py  mic_info_dialog.py  mic_info_widget.py  mic_info_widget_container.py  pyproject.toml  qflowlayout.py  senn_rx_monitor.py  server.py  setup.cfg  setup.py  status_indicator.py  timeout.py
debian/: changelog  control  copyright  linux-show-player-senn-rx-monitor.install  rules  senn-rx-monitor.install  senn-rx-monitor.links
discovery/: mcp_discovery.py
mic_rx_monitor/: __init__.py  application.py  core.py  file_io.py  main.py  schema.py
mic_rx_monitor/_vendor/lisp/: README.rst
mic_rx_monitor/_vendor/lisp/backend/: audio_utils.py
mic_rx_monitor/_vendor/lisp/core/: clock.py  signal.py
mic_rx_monitor/core/: __init__.py
mic_rx_monitor/discovery/: __init__.py  mcp_discovery.py
mic_rx_monitor/i18n/: __init__.py
mic_rx_monitor/servers/: mcp_server.py
mic_rx_monitor/ui/: add_receiver_dialog.py  colors.py  main_window.py  mic_info_dialog.py  mic_info_layout.py  mic_info_widget_container.py  qflowlayout.py  rename_receiver_dialog.py
mic_rx_monitor/ui/menus/: about_menu.py  edit_menu.py  file_menu.py  menu.py
mic_rx_monitor/ui/widgets/: battery_indicator.py  drag.py  meters.py  mic_info.py  status_indicator.py
servers/: mcp_server.py
ui/: add_receiver_dialog.py  mic_info_dialog.py  mic_info_layout.py  mic_info_widget_container.py  qflowlayout.py  rename_receiver_dialog.py
ui/widgets/: battery_indicator.py  drag.py  meters.py  mic_info.py  status_indicator.py
(+2 files in other folders)
