[metadata]
name = mic_rx_monitor
author = s0600204
description = attr: mix_rx_monitor.__doc__
long_description = file: README.rst
keywords = microphones, proaudio, radio

# See https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha

    Intended Audience :: End Users/Desktop

    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Analysis

    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)

    Environment :: X11 Applications :: Qt

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12


[options]
packages = find:
include_package_data = True
python_requires = >= 3.8
install_requires =
    appdirs
    netifaces
    PyQt5
    PyQt5-DigitalMeter
    pyqtdarktheme
    strictyaml

[options.entry_points]
console_scripts =
    senn-rx-monitor = mic_rx_monitor.main:main
